# hltv-matches-parser

./: .gitignore  ArrayTable.h  CMakeCache.txt  CMakeLists.txt  DatValue.h  Makefile  MatchValue.h  README.md  ScanTable.h  SortTable.h  TabRecord.h  Table.h  TreeTable.h  cmake_install.cmake  dump.html  fetch.py  imgui.ini  main.cpp
